--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     crossorigin="anonymous"></script>
 
   <!-- CSS link -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <!--Icon-->
-  <link rel="icon" href="images/icon.png" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/x-icon">
 
   <!-- Font-awesome -->
   <script src="https://kit.fontawesome.com/81fd5e3127.js" crossorigin="anonymous"></script>
@@ -66,7 +66,7 @@
             Order Now</button>
         </div>
         <div class="col-xl-6 col-md-6">
-          <img class="title-image" src="images/burger.jpg">
+          <img class="title-image" src="burger.jpg">
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@
         <br /><br><br /><br><br />
         <hr>
         <div class="feature-box col-xl-4">
-          <img src="images/i1.png" class="feature-image">
+          <img src="i1.png" class="feature-image">
           <h3 class="feature-title">Tasty Food</h3>
           <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
               class="fa-solid fa-star"></i><i class="fa-solid fa-star-half"></i></p>
@@ -95,7 +95,7 @@
         </div>
 
         <div class="feature-box col-xl-4">
-          <img src="images/i2.png" class="feature-image">
+          <img src="i2.png" class="feature-image">
           <h3 class="feature-title">Tasty Food</h3>
           <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
               class="fa-solid fa-star"></i><i class="fa-solid fa-star-half"></i></p>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="feature-box col-xl-4">
-          <img src="images/i3.png" class="feature-image">
+          <img src="i3.png" class="feature-image">
           <h3 class="feature-title">Tasty Food</h3>
           <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
               class="fa-solid fa-star"></i><i class="fa-solid fa-star-half"></i></p>
@@ -117,7 +117,7 @@
 
       <div class="row">
         <div class="feature-box col-xl-4">
-          <img src="images/i4.png" class="feature-image">
+          <img src="i4.png" class="feature-image">
           <h3 class="feature-title">Tasty Food</h3>
           <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
               class="fa-solid fa-star"></i><i class="fa-solid fa-star-half"></i></p>
@@ -127,7 +127,7 @@
         </div>
 
         <div class="feature-box col-xl-4">
-          <img src="images/i5.png" class="feature-image">
+          <img src="i5.png" class="feature-image">
           <h3 class="feature-title">Tasty Food</h3>
           <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
               class="fa-solid fa-star"></i><i class="fa-solid fa-star-half"></i></p>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="feature-box col-xl-4">
-          <img src="images/i6.png" class="feature-image">
+          <img src="i6.png" class="feature-image">
           <h3 class="feature-title">Tasty Food</h3>
           <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
               class="fa-solid fa-star"></i><i class="fa-solid fa-star-half"></i></p>
@@ -156,7 +156,7 @@
   <section class="mov-img">
     <h1>Mmmmm… Toasty!</h1>
     <div>
-      <img src="images/img-1.jpg" class="moving-images" id="i1" name="i1">
+      <img src="img-1.jpg" class="moving-images" id="i1" name="i1">
     </div>
 
   </section>
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="menu-column col-xl-4 col-md-6">
           <div class="card">
-            <center><img src="images/i1.png" class="card-img"></center>
+            <center><img src="i1.png" class="card-img"></center>
             <div class="card-body">
               <h5 class="card-title menu-text">Delicious Food</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -184,7 +184,7 @@
 
         <div class="menu-column col-xl-4 col-md-6">
           <div class="card">
-            <center><img src="images/i2.png" class="card-img"></center>
+            <center><img src="i2.png" class="card-img"></center>
             <div class="card-body">
               <h5 class="card-title menu-text">Delicious Food</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -200,7 +200,7 @@
 
         <div class="menu-column col-xl-4 col-md-6">
           <div class="card">
-            <center><img src="images/i3.png" class="card-img"></center>
+            <center><img src="i3.png" class="card-img"></center>
             <div class="card-body">
               <h5 class="card-title menu-text">Delicious Food</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -217,7 +217,7 @@
         <div class="row">
           <div class="menu-column col-xl-4 col-md-6">
             <div class="card">
-              <center><img src="images/i4.png" class="card-img"></center>
+              <center><img src="i4.png" class="card-img"></center>
               <div class="card-body">
                 <h5 class="card-title menu-text">Delicious Food</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -234,7 +234,7 @@
 
           <div class="menu-column col-xl-4 col-md-6">
             <div class="card">
-              <center><img src="images/i5.png" class="card-img"></center>
+              <center><img src="i5.png" class="card-img"></center>
               <div class="card-body">
                 <h5 class="card-title menu-text">Delicious Food</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -251,7 +251,7 @@
 
           <div class="menu-column col-xl-4 col-md-6">
             <div class="card">
-              <center><img src="images/i6.png" class="card-img"></center>
+              <center><img src="i6.png" class="card-img"></center>
               <div class="card-body">
                 <h5 class="card-title menu-text">Delicious Food</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -270,7 +270,7 @@
         <div class="row">
           <div class="menu-column col-xl-4 col-md-6">
             <div class="card">
-              <center><img src="images/i7.png" class="card-img"></center>
+              <center><img src="i7.png" class="card-img"></center>
               <div class="card-body">
                 <h5 class="card-title menu-text">Delicious Food</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -287,7 +287,7 @@
 
           <div class="menu-column col-xl-4 col-md-6">
             <div class="card">
-              <center><img src="images/i8.png" class="card-img"></center>
+              <center><img src="i8.png" class="card-img"></center>
               <div class="card-body">
                 <h5 class="card-title menu-text">Delicious Food</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -304,7 +304,7 @@
 
           <div class="menu-column col-xl-4 col-md-6">
             <div class="card">
-              <center><img src="images/i9.png" class="card-img"></center>
+              <center><img src="i9.png" class="card-img"></center>
               <div class="card-body">
                 <h5 class="card-title menu-text">Delicious Food</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -324,7 +324,7 @@
       <div class="row">
         <div class="menu-column col-xl-4 col-md-6">
           <div class="card">
-            <center><img src="images/i10.png" class="card-img"></center>
+            <center><img src="i10.png" class="card-img"></center>
             <div class="card-body">
               <h5 class="card-title menu-text">Delicious Food</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -340,7 +340,7 @@
 
         <div class="menu-column col-xl-4 col-md-6">
           <div class="card">
-            <center><img src="images/i11.png" class="card-img"></center>
+            <center><img src="i11.png" class="card-img"></center>
             <div class="card-body">
               <h5 class="card-title menu-text">Delicious Food</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -356,7 +356,7 @@
 
         <div class="menu-column col-xl-4 col-md-6">
           <div class="card">
-            <center><img src="images/i13.png" class="card-img"></center>
+            <center><img src="i13.png" class="card-img"></center>
             <div class="card-body">
               <h5 class="card-title menu-text">Delicious Food</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
